# AI_Journalist_Manager

./: .env.example  .gitignore  .replit  SCRAPER_IMPROVEMENTS.md  ai_service.py  app.py  audio_service.py  config.py  init_db.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  scheduler.py  scraper.py  telegram_bot.py  translations.py
attached_assets/: Pasted-J-ai-besoin-de-d-velopper-une-webapp-int-grant-un-agent_1765929088313.txt  Pasted-J-ai-besoin-de-d-velopper-une-webapp-int-grant-un-agent_1765929915148.txt  Pasted-J-ai-besoin-de-d-velopper-une-webapp-int-grant-un-agent_1765931253844.txt  Pasted-J-ai-besoin-de-d-velopper-une-webapp-int-grant-un-agent_1765966298083.txt  Pasted-J-ai-besoin-de-d-velopper-une-webapp-int-grant-un-agent_1765967302006.txt  Pasted-Voici-un-r-sum-d-actualit-concis-et-neutre-structur-en-_1766108701275.txt
docs/: API.md  API_CONFIGURATION.md  ARCHITECTURE.md  CONFIGURATION.md  GUIDE_UTILISATEUR.md  MODELS.md  README.md  SERVICES.md  USER_GUIDE.md  WHATSAPP_BOT.md
lang/: en.json  fr.json
models/: __init__.py  activity_log.py  article.py  daily_summary.py  delivery_channel.py  fetch_statistics.py  journalist.py  settings.py  source.py  subscriber.py  subscription_plan.py  token_usage.py  user.py
routes/: __init__.py  admin.py  api.py  auth.py  journalist_stats.py  journalists.py  logs.py  plans.py  settings.py  subscribers.py  users.py  whatsapp.py
security/: __init__.py  auth.py  logging.py
services/: __init__.py  ai_service.py  audio_service.py  delivery_service.py  openai_service.py  openrouter_service.py  (+7 more)
(+29 files in other folders)
